2016-17-06 Michele Pinamonti <michele.pinamonti@gmail.com>
        * Fix in "Variable" reading from config file (with ntuple inputs) to allow TTree::Draw special functions
        * Ranking plot including Normalisation Factors
        * Normalisation Factor titles propagated into plots
        
2016-15-06 Michele Pinamonti <michele.pinamonti@gmail.com>
        * Error bars in Syst plots
        * InputName option added (to use histogram inputs with different name than the Job name)
        
2016-13-06 Michele Pinamonti <michele.pinamonti@gmail.com>
        * Fixed autobin computation in presence of ghost samples

2016-08-06 Michele Pinamonti <michele.pinamonti@gmail.com>
        * Categories in MultiFit Pull plot: use NPCategories: in MultiFit config
        
2016-06-06 Michele Pinamonti <michele.pinamonti@gmail.com>, Thomas Calvet <calvet@cppm.in2p3.fr>
        * Partial fix of weight systemtics on smmothed samples
        * Option to add random initial values for the NP (usefull to help Asimov converging): use flag "SetRandomInitialNPval:" (e.g. set it to 0.1) 
        
2016-05-27 Michele Pinamonti <michele.pinamonti@gmail.com>
        * Printout missing histogram (thanks t Davide Gerbaudo)
        * KeepPruning flag in config file (allows to read Pruning.root file not to read already pruned systematics)
        
2016-05-18 Thomas Calvet <calvet@cppm.in2p3.fr>
        * Adding functionality to do correlation plot
	* Small bug fix for NTuple reading
	* Bug fix for SystDataPlots option
        
2016-05-11 Michele Pinamonti <michele.pinamonti@gmail.com>, Valerio Dao <valerio.dao@cern.ch>
        * Pruning functionality fixed
        
2016-05-09 Michele Pinamonti <michele.pinamonti@gmail.com>, Valerio Dao <valerio.dao@cern.ch>
        * Pruning functionality (and plot) improved

2016-05-06 Michele Pinamonti <michele.pinamonti@gmail.com>, Valerio Dao <valerio.dao@cern.ch>
        * Systematic decorrelation options added (still to document)